// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card demo -- card 1`] = `
.c1 {
  line-height: 28px;
  color: #0a1633;
  font-size: 14px;
  font-weight: bold;
  padding: 0 16px;
  margin-top: 12px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c2 {
  display: block;
  line-height: 22px;
  font-size: 12px;
  font-weight: normal;
  color: #c3cad9;
}

.c3 {
  line-height: 28px;
  padding: 0 16px;
  margin-top: 12px;
}

.c3:before,
.c3:after {
  content: ' ';
  display: table;
}

.c3:after {
  clear: both;
}

.c5 {
  min-height: 30px;
  padding: 0 16px;
  margin-top: 12px;
}

.c6 {
  border-top: 1px solid #e1e6f0;
  line-height: 1;
  padding: 0 16px;
  margin-top: 12px;
  padding-top: 12px;
}

.c6:before,
.c6:after {
  content: ' ';
  display: table;
}

.c6:after {
  clear: both;
}

.c0 {
  box-sizing: border-box;
  border: 1px solid #e1e6f0;
  border-radius: 4px;
  background-color: #FFF;
  text-align: left;
  padding-bottom: 12px;
}

.c4 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  border-color: #c3cad9;
  background-color: #FFF;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c4:hover {
  color: #4074e1;
  border-color: #4683e6;
}

.c4[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div>
      This is the title
    </div>
    <div
      class="c2"
    >
      This is the comment
    </div>
  </div>
  <div
    class="c3"
  >
    <button
      class="c4"
      type="button"
    >
      This is a action button
    </button>
    <button
      class="c4"
      type="button"
    >
      This is a action button
    </button>
  </div>
  <div
    class="c5"
  >
    <div
      style="background:#e1e6f0;height:50px;padding:10px;"
    >
      This is the content
    </div>
  </div>
  <div
    class="c6"
  >
    <button
      class="c4"
      style="float:right;"
      type="button"
    >
      This is a footer button
    </button>
  </div>
</div>
`;

exports[`Card demo -- custom 1`] = `
.c4 {
  line-height: 28px;
  color: #0a1633;
  font-size: 14px;
  font-weight: bold;
  padding: 0 16px;
  margin-top: 12px;
}

.c4:before,
.c4:after {
  content: ' ';
  display: table;
}

.c4:after {
  clear: both;
}

.c5 {
  display: block;
  line-height: 22px;
  font-size: 12px;
  font-weight: normal;
  color: #c3cad9;
}

.c2 {
  line-height: 28px;
  padding: 0 16px;
  margin-top: 12px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c1 {
  min-height: 30px;
  padding: 0 16px;
  margin-top: 12px;
}

.c6 {
  border-top: 1px solid #e1e6f0;
  line-height: 1;
  padding: 0 16px;
  margin-top: 12px;
  padding-top: 12px;
}

.c6:before,
.c6:after {
  content: ' ';
  display: table;
}

.c6:after {
  clear: both;
}

.c0 {
  box-sizing: border-box;
  border: 1px solid #e1e6f0;
  border-radius: 4px;
  background-color: #FFF;
  text-align: left;
  padding-bottom: 12px;
}

.c3 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  border-color: #c3cad9;
  background-color: #FFF;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c3:hover {
  color: #4074e1;
  border-color: #4683e6;
}

.c3[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      style="background:#e1e6f0;height:50px;padding:10px;"
    >
      This is the content
    </div>
  </div>
  <div
    class="c2"
  >
    <button
      class="c3"
      type="button"
    >
      This is a action button
    </button>
    <button
      class="c3"
      type="button"
    >
      This is a action button
    </button>
  </div>
  <div
    class="c4"
  >
    <div>
      This is the title
    </div>
    <div
      class="c5"
    >
      This is the comment
    </div>
  </div>
  <div
    class="c6"
  >
    <button
      class="c3"
      style="float:right;"
      type="button"
    >
      This is a footer button
    </button>
  </div>
</div>
`;
